# jcc-shell-apk

./: README.md  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: JCC.sh
app/src/main/assets/emu/: emu_injector
app/src/main/cpp/: CMakeLists.txt  cardpool.cpp  cardpool.h  inject_entry.cpp  jcc_log.h  log.h  mini_inject.cpp  season_offsets.h
app/src/main/java/com/jcc/shell/: BridgeClient.java  MainActivity.java  Su.java
app/src/main/res/values/: strings.xml
tools/: patch_errlog.py  strip_comments.py  tag_full_kernel.py
